# pyC4M

./: .gitignore  README.md  profile.out  pyproject.toml
benchmarks/: runtime_benchmarks.py  runtime_results.csv  runtime_results2.csv  runtime_results3.csv
docs/: ccm_concepts.md  verification_issues.md
src/pyc4m/: __init__.py  api.py  cccm.py  conditional.py
tests/: test_ccm.py
