[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyc4m"
version = "0.1.0"
description = "Causalized and conditional CCM extensions for pyEDM"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT License" }
requires-python = "~=3.9"
keywords = ["ccm", "causality", "empirical dynamic modeling", "time series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/your-org/pyC4M"
Repository = "https://github.com/your-org/pyC4M"
Issues = "https://github.com/your-org/pyC4M/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]
